--- a/src/main/resources/templates/admin/coupon/couponCreate.html
+++ b/src/main/resources/templates/admin/coupon/couponCreate.html
@@ -32,7 +32,7 @@
         <aside th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'coupon,couponCreate')}"></aside>
         <div class="layout-page">
             <!-- Nav-bar -->
-            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Coupon / Tạo mới')}"></nav>
+            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Coupon / Create')}"></nav>
 
             <!-- / Navbar -->
 
@@ -42,55 +42,55 @@
                     <!-- Basic Layout -->
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Tạo mã giảm giá</h5>
+                            <h5 class="card-title">Create new coupon</h5>
                             <form th:object="${couponForm}" th:action="@{/admin/coupon/create}" method="post" id="couponForm">
                                 <div class="mb-3">
-                                    <label class="form-label" for="couponCode">Mã giảm giá*</label>
+                                    <label class="form-label" for="couponCode">Coupon Code*</label>
                                     <input type="text"
                                            class="form-control"
                                            id="couponCode"
                                            th:field="${couponForm.couponCode}"
-                                           placeholder="Mã giảm giá"
+                                           placeholder="Coupon Code"
                                            th:class="${#fields.hasErrors('couponCode')}? 'form-control fieldError' : 'form-control'"
                                            maxlength="20"
                                            oninput="formatCouponCode(this)"/>
                                     <p th:if="${#fields.hasErrors('couponCode')}" th:errors="*{couponCode}" th:errorclass="errorMessage">
-                                        Đây là trường bắt buộc
+                                        This field is required
                                     </p>
                                 </div>
 
                                 <div class="mb-3">
-                                    <label class="form-label" for="couponName">Tên mã*</label>
+                                    <label class="form-label" for="couponName">Coupon Name*</label>
                                     <input type="text"
                                            class="form-control"
                                            id="couponName"
                                            th:field="${couponForm.couponName}"
-                                           placeholder="Tên mã"
+                                           placeholder="Coupon Name"
                                            th:class="${#fields.hasErrors('couponName')}? 'form-control fieldError' : 'form-control'"
                                            maxlength="30"/>
                                     <p th:if="${#fields.hasErrors('couponName')}" th:errors="*{couponName}" th:errorclass="errorMessage">
-                                        Đây là trường bắt buộc
+                                        This field is required
                                     </p>
                                 </div>
 
                                 <div class="mb-3">
-                                    <label class="form-label" for="couponDescription">Mô tả</label>
+                                    <label class="form-label" for="couponDescription">Description</label>
                                     <textarea
                                       class="form-control"
                                       id="couponDescription"
                                       th:field="${couponForm.couponDescription}"
-                                      placeholder="Mô tả"
+                                      placeholder="Description"
                                       th:class="${#fields.hasErrors('couponDescription')}? 'form-control fieldError' : 'form-control'"
                                       style="height: 150px;"
                                       maxlength="100"></textarea>
                                     <p th:if="${#fields.hasErrors('couponDescription')}" th:errors="*{couponDescription}" th:errorclass="errorMessage">
-                                        Đây là trường bắt buộc
+                                        This field is required
                                     </p>
                                 </div>
 
                                 <div class="d-flex item justify-content-around">
                                     <div class="mb-3 mr-2">
-                                        <label class="form-label">Loại mã*</label>
+                                        <label class="form-label">Coupon type*</label>
                                         <select class="form-select" th:field="${couponForm.typeCoupon}" id="couponType">
                                             <option th:each="type : ${T(vn.hdweb.team9.domain.entity.TypeCoupon).values()}"
                                                     th:value="${type}"
@@ -99,7 +99,7 @@
                                         </select>
                                     </div>
                                     <div class="mb-3 flex-grow-1 mx-2">
-                                        <label class="form-label" for="couponValue">Giá trị*</label>
+                                        <label class="form-label" for="couponValue">Coupon Value*</label>
                                         <input
                                             type="number"
                                             class="form-control"
@@ -108,26 +108,26 @@
                                             placeholder="Giá trị"
                                             th:class="${#fields.hasErrors('couponValue')}? 'form-control fieldError' : 'form-control'"/>
                                         <p th:if="${#fields.hasErrors('couponValue')}" th:errors="*{couponValue}" th:errorclass="errorMessage">
-                                            Đây là trường bắt buộc
+                                            This field is required
                                         </p>
                                     </div>
 
                                     <div class="mb-3 flex-grow-1 ml-2">
-                                        <label class="form-label" for="couponQuantity">Số lượng*</label>
+                                        <label class="form-label" for="couponQuantity">Coupon Quantity*</label>
                                         <input type="number"
                                                class="form-control"
                                                id="couponQuantity"
                                                th:field="${couponForm.couponQuantity}"
                                                placeholder="Số lượng" th:class="${#fields.hasErrors('couponQuantity')}? 'form-control fieldError' : 'form-control'"/>
                                         <p th:if="${#fields.hasErrors('couponQuantity')}" th:errors="*{couponQuantity}" th:errorclass="errorMessage">
-                                            Đây là trường bắt buộc
+                                            This field is required
                                         </p>
                                     </div>
 
                                 </div>
                                 <div class="d-flex item justify-content-around">
                                     <div class="mb-3 flex-grow-1 mr-2 ">
-                                        <label class="form-label" for="datePicker-startDate">Ngày bắt đầu*</label>
+                                        <label class="form-label" for="datePicker-startDate">Start Date*</label>
                                         <input type="date"
                                                class="form-control"
                                                id="datePicker-startDate"
@@ -135,7 +135,7 @@
                                                th:class="${#fields.hasErrors('startDate')}? 'form-control
                                                 fieldError' : 'form-control'"/>
                                         <p th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}" th:errorclass="errorMessage">
-                                            Đây là trường bắt buộc
+                                            This field is required
                                         </p>
                                         <script>
                                             <!--start date min is today-->
@@ -144,14 +144,14 @@
                                     </div>
 
                                     <div class="mb-3 flex-grow-1 mx-2">
-                                        <label class="form-label" for="datePicker-endDate">Ngày kết thúc*</label>
+                                        <label class="form-label" for="datePicker-endDate">End Date*</label>
                                         <input type="date"
                                                class="form-control"
                                                id="datePicker-endDate"
                                                th:field="${couponForm.endDate}"
                                                th:class="${#fields.hasErrors('endDate')}? 'form-control fieldError' : 'form-control'"/>
                                         <p th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}" th:errorclass="errorMessage">
-                                            Đây là trường bắt buộc
+                                            This field is required
                                         </p>
                                         <script>
                                             <!--end date min is today-->
@@ -160,7 +160,7 @@
                                     </div>
 
                                 </div>
-                                <button type="submit" class="btn btn-primary">Tạo mã</button>
+                                <button type="submit" class="btn btn-primary">Create New</button>
                             </form>
                         </div>
                     </div>
