--- a/src/main/resources/templates/admin/fragments/menu.html
+++ b/src/main/resources/templates/admin/fragments/menu.html
@@ -28,12 +28,12 @@
             </a>
             <ul class="menu-sub">
                 <li th:classappend="${value_menu.contains('restaurants_list')?'active':''}" class="menu-item">
-                    <a th:href="@{/admin/restaurants/list}" class="menu-link">
+                    <a th:href="@{/admin/restaurant/list}" class="menu-link">
                         <div>List restaurants</div>
                     </a>
                 </li>
                 <li th:classappend="${value_menu.contains('restaurants_create')?'active':''}" class="menu-item">
-                    <a th:href="@{/admin/restaurants/create}" class="menu-link">
+                    <a th:href="@{/admin/restaurant/create}" class="menu-link">
                         <div>Create new restaurant</div>
                     </a>
                 </li>
